check for --module-path mismatch