@@ -34,6 +34,9 @@
  * @run driver InvalidModuleOptions
  */
 
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import jdk.test.lib.cds.CDSModulePackager;
 import jdk.test.lib.cds.CDSTestUtils;
 import jdk.test.lib.helpers.ClassFileInstaller;
 import jdk.test.lib.process.OutputAnalyzer;
@@ -41,12 +44,33 @@ import jdk.test.lib.process.ProcessTools;
 import jdk.test.lib.StringArrayUtils;
 
 public class InvalidModuleOptions {
+    static final Path modulesSrc = Paths.get(System.getProperty("test.src")).resolve("modules");
+    static final Path modulesSrc2 = Paths.get(System.getProperty("test.src")).resolve("modules2");
     static String appJar = ClassFileInstaller.getJarPath("hello.jar");
     static String aotConfigFile = "hello.aotconfig";
     static String aotCacheFile = "hello.aot";
     static String helloClass = "Hello";
+    static String modulePath;
+    static String modulePath2;
 
     static String[][] testCases = {
+        // --module-path
+        {
+            "<mp>", null,
+            "module path has fewer elements than expected",
+            "--module-path option is different",
+        },
+        {
+            "<mp>", "<mp2>",
+            "--module-path option is different",
+        },
+        {
+            null, "<mp>",
+            "module path has more elements than expected",
+            "--module-path option is different",
+        },
+
+        // --add-modules
         {
             null, "--add-modules=java.instrument",
             "Mismatched values for property jdk.module.addmods: java.instrument specified for current JVM but not in AOTConfiguration"
@@ -58,14 +82,31 @@ public class InvalidModuleOptions {
             "--add-modules=java.instrument", "--add-modules=java.base",
             "Mismatched values for property jdk.module.addmods: current = java.base, AOTConfiguration = java.instrument"
         },
+
+        // --enable-native-access
+        // Just test one variation, as HotSpot handles this the same way as --add-modules.
+        {
+            null, "--enable-native-access=ALL_UNNAMED",
+            "Mismatched values for property jdk.module.enable.native.access: ALL_UNNAMED specified for current JVM but not in AOTConfiguration"
+        },
+
+        // -Djdk.module.showModuleResolution=true also disabled full module graph:
         {
             null, "-Djdk.module.showModuleResolution=true",
             "full module graph: disabled due to incompatible property: jdk.module.showModuleResolution=true",
             "AOT class linking was enabled in training run but has been disabled due to incompatible module options",
-        }
+        },
     };
 
     public static void main(String[] args) throws Exception {
+        CDSModulePackager modulePackager = new CDSModulePackager(modulesSrc);
+        modulePackager.createModularJar("com.test");
+        modulePath = modulePackager.getOutputDir().toString();
+
+        CDSModulePackager modulePackager2 = new CDSModulePackager(modulesSrc2, Paths.get("test-modules2"));
+        modulePackager2.createModularJar("com.moretest");
+        modulePath2 = modulePackager2.getOutputDir().toString();
+
         for (int i = 0; i < testCases.length; i++) {
             String[] testSpec = testCases[i];
             String trainOpt    = testSpec[0];
@@ -78,7 +119,7 @@ public class InvalidModuleOptions {
                 "-cp", appJar
             };
             if (trainOpt != null) {
-                trainCmds = StringArrayUtils.concat(trainCmds, trainOpt);
+                trainCmds = concat(trainCmds, trainOpt);
             }
             trainCmds = StringArrayUtils.concat(trainCmds, helloClass);
 
@@ -90,7 +131,7 @@ public class InvalidModuleOptions {
                 "-cp", appJar
             };
             if (assemblyOpt != null) {
-                assemblyCmds = StringArrayUtils.concat(assemblyCmds, assemblyOpt);
+                assemblyCmds = concat(assemblyCmds, assemblyOpt);
             }
 
             ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(trainCmds);
@@ -107,6 +148,16 @@ public class InvalidModuleOptions {
             }
             out.shouldNotContain("AOTCache creation is complete");
             out.shouldNotHaveExitValue(0);
+        }
+    }
+
+    static String[] concat(String[] opts, String extra) {
+        if (extra.equals("<mp>")) {
+            return StringArrayUtils.concat(opts, "--module-path", modulePath);
+        } else if (extra.equals("<mp2>")) {
+            return StringArrayUtils.concat(opts, "--module-path", modulePath2);
+        } else {
+            return StringArrayUtils.concat(opts, extra);
         }
     }
 }
